--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-content-loader": "^0.2.3"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
